add http post method

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Pitstop</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +11,7 @@
 		
 		<div class="container" ng-controller="MainController">
 	    	<div class="row"></div>
-	    	<h1>For the game. For the World</h1>
+	    	<h1 class="text-center">For the game. For the World</h1>
 	    </div>
 
 		<!-- ANGULAR LIBS -->
