--- a/index.html
+++ b/index.html
@@ -10,45 +10,51 @@
 	<body>
 		
 		<div class="container" ng-controller="MainController">
-	    	<div class="row"></div>
+	    	<div class="row top-gap"></div>
 	    	<h1 class="text-center">For the game. For the World</h1>
 
-	    	<div class="row">
-		    	<div class="col-xs-8 col-md-8 col-lg-8">
-					<div class="form-group">
-						<label for="setkey">SetKey:</label>
-						<input type="text" name="setkey" class="form-control" required>
+	    	<div class="row top-gap">
+		    	<div class="col-xs-10 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
+		    		<div class="form-shape">
+						<div class="form-group">
+							<label for="setkey">SetKey:</label>
+							<input type="text" name="setkey" class="form-control" required>
+						</div>
+						<div class="form-group">
+							<label for="setvalue">SetValue:</label>
+							<input type="text" name="setvalue" class="form-control" required>
+						</div>
+						<button type="submit" class="btn btn-success">Push it</button>
 					</div>
-					<div class="form-group">
-						<label for="setvalue">SetValue:</label>
-						<input type="text" name="setvalue" class="form-control" required>
+					<div class="form-shape">
+						<div class="form-group">
+							<label for="getkey">GetKey:</label>
+							<input type="text" name="getkey" class="form-control" required>
+						</div>
+						<button type="submit" class="btn btn-success">Get response</button>
 					</div>
-					<button type="submit" class="btn btn-success">Push it</button>
-
-					<div class="form-group">
-						<label for="getkey">GetKey:</label>
-						<input type="text" name="getkey" class="form-control" required>
+						<div class="form-shape">
+						<div class="form-group">
+							<label for="topic">Topic:</label>
+							<input type="text" name="topic" class="form-control">
+						</div>
+						<div class="form-group">
+							<label for="message">Message:</label>
+							<input type="text" name="message" class="form-control">
+						</div>
+						<button type="submit" class="btn btn-success">Push it</button>
 					</div>
-					<button type="submit" class="btn btn-success">Get response</button>
-
-					<div class="form-group">
-						<label for="topic">Topic:</label>
-						<input type="text" name="topic" class="form-control">
+					<div class="form-shape">
+						<div class="form-group">
+							<label for="gettopic">Get Topic:</label>
+							<input type="text" name="gettopic" class="form-control">
+						</div>
+						<div class="form-group">
+							<label for="number">Get number:</label>
+							<input type="text" name="number" class="form-control">
+						</div>
+						<button type="submit" class="btn btn-success">Get topic</button>
 					</div>
-					<div class="form-group">
-						<label for="message">Message:</label>
-						<input type="text" name="message" class="form-control">
-					</div>
-					<button type="submit" class="btn btn-success">Push it</button>
-					<div class="form-group">
-						<label for="gettopic">Get Topic:</label>
-						<input type="text" name="gettopic" class="form-control">
-					</div>
-					<div class="form-group">
-						<label for="number">Get number:</label>
-						<input type="text" name="number" class="form-control">
-					</div>
-					<button type="submit" class="btn btn-success">Get topic</button>
 				</div>
 			</div>
 	    </div>
