remove extra files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		
 		<div class="container" ng-controller="MainController">
-	    	<h1 class="text-center">For the game. For the World</h1>
+	    	<h1 class="text-center page-header">For the game. For the World</h1>
 
 	    	<div class="form-container">
 
@@ -91,10 +91,7 @@
 	    
 	    <!-- ANGULAR CORE -->
 	    <script src="js/app.config.js"></script>
-	    <script src="js/services.js"></script>
 	    <script src="js/controllers.js"></script>
-	    <script src="js/directives.js"></script>
-	    <script src="js/filters.js"></script>
 		
 	</body>
 </html>
